--- a/src/dojoAjax2.html
+++ b/src/dojoAjax2.html
@@ -5,7 +5,7 @@
 <title>Demo: Send Form Data via xhrPost</title>
 <link rel="stylesheet" href="js/css/styleEvent.css" media="screen">
 <link rel="stylesheet" href="http://dojotoolkit.org/documentation/tutorials/1.6/resources/style/demo.css" media="screen">
-		<script data-dojo-config="async: 1, tlmSiblingOfDojo: 0, isDebug: 1" src="js/dojo/dojo.js"></script>
+		<script data-dojo-config="async: 1, tlmSiblingOfDojo: 0, isDebug: 1" src="http://yandex.st/dojo/1.7.0/dojo/dojo.js"></script>
 		<script>
 		require(["dojo"], function(dojo) {});
 			
@@ -39,10 +39,10 @@
 
 		<form id="formNode">
 			<label class="qhead">Your Name</label>
-			<input type="text" name="name" placeholder="your name"><br />
+			<input type="text" name="name"><br />
 
 			<label class="qhead">Your Bio</label>
-			<textarea name="bio" rows="5" cols="20" placeholder="your bio"></textarea><br />
+			<textarea name="bio" rows="5" cols="20"></textarea><br />
 
 			<label class="qhead">Your Color</label>
 			<select name="favoriteColor">
