--- a/src/dojoChartLine.html
+++ b/src/dojoChartLine.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>dojoChart Line</title>
-<script data-dojo-config="async: 1, tlmSiblingOfDojo: 0, isDebug: 1" src="js/dojo/dojo.js"></script>
+<script data-dojo-config="async: 1, tlmSiblingOfDojo: 0, isDebug: 1" src="http://yandex.st/dojo/1.7.0/dojo/dojo.js"></script>
 <script>
 require(["dojo", "dojox/charting/Chart2D", "dojox/charting/action2d/Tooltip", "dojox/charting/action2d/Magnify",
 "dojox/charting/action2d/Highlight", "dojox/charting/themes/Claro", "dojox/charting/widget/Legend"], 
