--- a/src/dojoAjax1.html
+++ b/src/dojoAjax1.html
@@ -5,7 +5,7 @@
 <title>Demo: Check a Username's Availability</title>
 <link rel="stylesheet" href="js/css/styleEvent.css" media="screen">
 <link rel="stylesheet" href="http://dojotoolkit.org/documentation/tutorials/1.6/resources/style/demo.css" media="screen">
-<script data-dojo-config="async: 1, tlmSiblingOfDojo: 0, isDebug: 1" src="js/dojo/dojo.js"></script>
+<script data-dojo-config="async: 1, tlmSiblingOfDojo: 0, isDebug: 1" src="http://yandex.st/dojo/1.7.0/dojo/dojo.js"></script>
 		
 <script>
 require(["dojo"], function(dojo) {
@@ -56,7 +56,7 @@ require(["dojo"], function(dojo) {
 		<p>Type a username to know its availability.  <em>("dojo" and "sitepen" are taken)</em></p>
 		<br /><br />
 		<strong>Desired Username:  </strong>
-		<input type="text" placeholder="please type your ID" id="usernameInput" size="20">
+		<input type="text" id="usernameInput" size="20">
 		<span id="availabilityNode"></span>
 	</body>
 </html>
